# learn-rust-chat-web-server

./: .gitignore  Cargo.toml  Makefile  README.md  loadtest.js
certs/: certificate.crt  certificate.pem  csr.pem  private_key.pem  privatekey.key
notes/: Mind-Map.canvas
notes/.obsidian/: hotkeys.json  workspace.json
notes/.obsidian/plugins/obsidian-git/: data.json
notes/Notes/: Chat App (Rust).md  Compression Optimization.md  HTTP - Optimization.md  HTTP - TLS Handshake Optimization.md  Http - Keep Alive Header.md  SSL.md  TCP Socket - HTTP Handling.md  Tokio - TCP.md  Tokio - Tasks.md  Trust Certificate in Windows.md
obsidian_notes/: Mind-Map.canvas
obsidian_notes/Notes/: Handle HTTP Response.md
res/: index.html  sitemap.xml  styles.css
src/: main.rs
src/cache/: mod.rs
src/compression/: constants.rs  mod.rs
src/request/: constants.rs  mod.rs
src/resource/: constants.rs  mod.rs
src/response/: constants.rs  headers.rs  mod.rs  status.rs
src/ssl/: constants.rs  mod.rs
