[package]
name = "chat_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flate2 = "1.0.26"
tokio = { version = "1.29.1", features = ["full", "rt-multi-thread"]}
tokio-rustls = "0.24.1"
rustls = "0.21.5"
rustls-pemfile = "1.0.3"